--- a/index.html
+++ b/index.html
@@ -68,22 +68,22 @@
           <div class="right-side-container">
             <div class="first-two-box">
               <div class="box">
-                <img class="icon" src="./asset/icons/bar-chart.png" alt="" />
+                <img class="icon" src="./asset/icons/coding.png" alt="" />
                 <h3>Web Developemnt</h3>
               </div>
               <div class="box">
                 <img class="icon" src="./asset/icons/bar-chart.png" alt="" />
-                <h3>Web Developemnt</h3>
+                <h3>Graphic and Sketch Designing</h3>
               </div>
             </div>
             <div class="first-two-box">
               <div class="box">
-                <img class="icon" src="./asset/icons/bar-chart.png" alt="" />
-                <h3>Web Developemnt</h3>
+                <img class="icon" src="./asset/icons/startup.png" alt="" />
+                <h3>Seo & Content   Writing</h3>
               </div>
               <div class="box">
-                <img class="icon" src="./asset/icons/bar-chart.png" alt="" />
-                <h3>Web Developemnt</h3>
+                <img class="icon" src="./asset/icons/digital-marketing.png" alt="" />
+                <h3>Digital Market Planning</h3>
               </div>
             </div>
           </div>
